  - interviews can be rescored even after rescoring is complete

* Adding new role.all_sites column

  - Used to determine whether a role should be restricted to a single site or not
  - Many old references to "tier" have been replaced 

* Replacing assignment notes with participant notes
  - All existing assignment notes are converted to participant notes
  - Assignment notes no longer exist

====================================================================================================
1.2.0
====================================================================================================

* Adding new cohort and service tables
  - Cohorts are now dynamic and can grow beyond the old tracking/comprehensive pair
  - Services are also now dynamic and linked to a particular cohort.

====================================================================================================
1.1.9
====================================================================================================

* Removing defunct auditing system

* Adding new timing report
  - This reports provides the average time taken to complete each stage of each phase of a
    questionnaire

* Adding further handling of participants who require sourcing
  - New conditions "sourcing required" and "unreachable" have been added to participant status
  - Participants who have no active phone numbers are included in the "sourcing required" queue
  - Removing old/defunct sourcing required report

* Quotas can now be defined by site as well as region
  - Supervisors now have read-only access to quotas and the quota report

* Participant sync by date
  - Participants can now be sync based on the date they were added to the data entry system

====================================================================================================
1.1.8
====================================================================================================

* Scheduled calls