@@ -235,8 +235,9 @@ class session extends \cenozo\business\session
       $_SESSION['slot'][$slot]['stack']['widgets'] = array();
     }
 
-    // kill the rescore and secondary contact cookies in case they exist
+    // kill the rescore, withdraw and secondary contact cookies in case they exist
     setcookie( 'rescoring_interview', NULL, time() - 3600, COOKIE_PATH );
+    setcookie( 'withdrawing_participant', NULL, time() - 3600, COOKIE_PATH );
     setcookie( 'secondary_id', NULL, time() - 3600, COOKIE_PATH );
     setcookie( 'secondary_participant_id', NULL, time() - 3600, COOKIE_PATH );
     setcookie( 'secondary_participant_first_name', NULL, time() - 3600, COOKIE_PATH );
