@@ -1,0 +1,19 @@
+DROP PROCEDURE IF EXISTS patch_operation;
+DELIMITER //
+CREATE PROCEDURE patch_operation()
+  BEGIN
+    -- determine the @cenozo database name
+    SET @cenozo = CONCAT( SUBSTRING( DATABASE(), 1, LOCATE( 'sabretooth', DATABASE() ) - 1 ),
+                          'cenozo' );
+
+    -- add new participant withdraw widget
+    SELECT "Adding new operations" AS "";
+
+    INSERT IGNORE INTO operation( type, subject, name, restricted, description )
+    VALUES( "widget", "participant", "withdraw", true, "Pseudo-assignment to handle participant withdraws." );
+  END //
+DELIMITER ;
+
+-- now call the procedure and remove the procedure
+CALL patch_operation();
+DROP PROCEDURE IF EXISTS patch_operation;
