@@ -2,6 +2,7 @@
 
 SET AUTOCOMMIT=0;
 
+SOURCE operation.sql
 SOURCE service_has_role.sql
 SOURCE role_has_operation.sql
 SOURCE role.sql
